6841831: G1: assert(contains_reference(from),"We just added it!") fires

During parallel rset updating we have to make sure that the worker ids of the refinement threads do not intersect with the worker ids that can be claimed by the mutator threads.

Reviewed-by: tonyp